fix desktop overflow

--- a/home/interface.css
+++ b/home/interface.css
@@ -1,3 +1,4 @@
+html,
 body {
   margin: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -12,6 +13,7 @@ body {
   font-size: 14px;
   line-height: 17px;
   color: #FFFFFF;
+  min-height: 100%;
 }
 
 .h1 {
@@ -38,13 +40,14 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 .interface {
   background: #3366CC;
   position: relative;
-  margin-top: 100px;
+  margin-top: 130px;
+  margin-bottom: 20px;
   border: #CC0000 3px solid;
   border-radius: 5%;
   box-shadow: inset 0px -6px 0px #000000;
